改用prototype的class定义vInset的js
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3690 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/svn/testSvn.html
+++ b/src/test/resources/corner/svn/testSvn.html
@@ -47,7 +47,7 @@ var type ="show1";
 	
 dojo.event.connect(window,"onload",this,"add");
 add=function(evt){
-	showText("addField",flags,flags2,"entity","name",type);
+	new VersionInsert("addField",flags,flags2,"entity","name",type);
 }
 
 
