--- a/src/test/resources/corner/svn/testSvn.html
+++ b/src/test/resources/corner/svn/testSvn.html
@@ -52,8 +52,8 @@ djConfig = { isDebug: true
 
 <SCRIPT LANGUAGE="JavaScript">
 <!--
-var flags = eval({"entity":{"id":"test01"}});
-var flags2 = eval({"entity":{"id":"test01","name":"中国111"}});
+var flags = eval({"entity":{"id":"test01","name":"0.0"}});
+var flags2 = eval({"entity":{"id":"test01","name":"0.0"}});
 var type ="show1";
 	
 dojo.event.connect(window,"onload",this,"add");
