调整页面显示
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3701 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/svn/testSvn.html
+++ b/src/test/resources/corner/svn/testSvn.html
@@ -27,15 +27,15 @@ djConfig = { isDebug: true
 
 <body>
 	
- <div class="diff">
-  <div id="legend">
+ <span class="diff">
+  <span id="legend">
    <dl>
     <dt class="add"></dt><dd>Added</dd>
     <dt class="mod"></dt><dd>Modified</dd>
     <dt class="cp"></dt><dd>Copied or renamed</dd>
    </dl>
-  </div>
- </div>
+  </span>
+ </span>
 <br><br><br><br><br>
 <span class="view"><del>deleted</del> <ins>inserted</ins> <span>same</span></span><br>
 增加：<span id ="addField" >dsadsa</span><br>
