--- a/src/test/resources/corner/window/tree/tree.html
+++ b/src/test/resources/corner/window/tree/tree.html
@@ -58,59 +58,17 @@ djConfig = { isDebug: true,
 <script language="JavaScript" type="text/javascript" src="js/controls.js"></script>
 <script language="JavaScript" type="text/javascript" src="js/builder.js"></script>
 <script language="JavaScript" type="text/javascript" src="js/ajaxtree.js"></script>
+<script language="JavaScript" type="text/javascript" src="js/common.js"></script>
+<script language="JavaScript" type="text/javascript" src="js/commonajax.js"></script>
+<script language="JavaScript" type="text/javascript" src="lefttree.js"></script>
 
 </HEAD>
 <body>
 		<div id="parent"></div>
 
 		<script type="text/javascript">
-			Ajax.Tree.Invoice = Ajax.Tree.create({
-				types: {
-					jobsite: {
-						page: 'ajaxtreedata.php',
-						prependParentId: '_jobsite-',
-						left:2,
-						right:3,
-						onClick:function(){
-							new Ajax.Tree.Invoice(this.element,'1','expense',{data:'Element my'});
-						}
-						// nothing to do if default behaviour is all that is needed
-						},
-					task: {
-						page: 'ajaxtreedata.php',
-						prependParentId: '_task-',
-						left:1,
-						right:100,
-						onClick:function(){
-							this.onTest();
-						}
-						// nothing to do if default behaviour is all that is needed
-					},
-					expense: {
-						leafNode: true,
-						insertion: function(el,data){
-							var node = Builder.node('dl',{},
-							[
-								Builder.node('dt',[data]),
-								Builder.node('dd',['delete'])
-							]);
-							el.appendChild(node);
-							this.mark.innerHTML = '&nbsp;';
-							//new Draggable(this.element);
-							this.clickExpense = function(){ alert('you clicked '+this.element.id); }.bind(this);
-							Event.observe(this.span,'click',this.clickExpense);
-						},
-						onDispose: function(){
-							Event.stopObserving(this.span,'click',this.clickExpense);
-						}
-					}
-				},
-				onTest: function(){
-					new Ajax.Tree.Invoice(this.element,'1','task',{data:'Element 2'});
-				}
-			});
-			var test = new Ajax.Tree.Invoice('parent','root','jobsite',{data:'First Element!'});
-			test.onTest();
+			new LeftTree("parent");
+			enableAjaxDebug();
 		</script>
 	</body>
 </html>
