修改windowDialog js源码，解决ie错误问题
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3709 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/testCheckBoxPop.html
+++ b/src/test/resources/corner/window/testCheckBoxPop.html
@@ -66,7 +66,7 @@ function selectRecord(obj){
 
 <script type="text/javascript"><!--
 
-new WindowQueryDialogAction("pwin_winDialog_button",{"id":"generated","className":"alphacube","title":"google",
+new WindowQueryDialogAction("pwin_winDialog_button",{"className":"alphacube","title":"google",
 									   "url":"pop.html","top ":"top:0","right":"left:0","width":"500","height":"300",
 									   "maxWidth":"none","maxHeight":"none","minWidth ":"500","minHeight":"300",
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
