--- a/src/test/resources/corner/window/test_win.html
+++ b/src/test/resources/corner/window/test_win.html
@@ -68,7 +68,7 @@ function selectRecord(obj){
 <script type="text/javascript"><!--
 	
 	new WindowQueryDialogAction("pwin_winDialog_button",{"className":"alphacube","title":"google",
-									   "url":"haha.html","top ":"top:0","right":"left:0","width":"500","height":"300",
+									   "url":"haha.html","top ":"0","right":"0","width":"500","height":"300",
 									   "maxWidth":"none","maxHeight":"none","minWidth ":"500","minHeight":"300",
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
