--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -17,6 +17,7 @@
 		<hr/>
 			Widget
 		<a jwcid="@PageLink" page="widget/QueryDialogTest"><span key="QueryDialog" /></a><br>
+		<a jwcid="@PageLink" page="widget/tree"><span key="Tree" /></a><br>
 		
 		<hr/>
 			GainPoint
