leftTreeService中加入entityservice，传递要查询的QueryClassName
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3723 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/tree/tree.html
+++ b/src/test/resources/corner/window/tree/tree.html
@@ -67,6 +67,8 @@ djConfig = { isDebug: true,
 </HEAD>
 <body>
 		<div id="parent"></div>
+		
+		<input type="hidden" id="leftTreeQueryClassName" value="com.bjmaxinfo.piano.model.custom.CustomMain" />
 
 		<script type="text/javascript">
 			new LeftTree("parent");
