选择并且返回lefttree demo完成
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3724 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/tree/testTree.html
+++ b/src/test/resources/corner/window/tree/testTree.html
@@ -45,7 +45,7 @@ dojo.require("tapestry.namespace")
 	
 
 <form method="post" action="/widget/QueryDialogTest,AForm.direct" id="AForm">
-	<span id="winDialog"><input type="checkbox" name="pwin_winDialog_button" id="pwin_winDialog_button"/></span>
+	<span id="winDialog"><img name="pwin_winDialog_button" id="pwin_winDialog_button" src="../../../../../main/js/corner/widget/templates/dic.gif" border="0" /></span>
   <br/>
 	<input id="test"/>
 	
@@ -58,7 +58,7 @@ dojo.require("tapestry.namespace")
 
 
 function selectRecord(obj){
-			dojo.byId('test').value=obj.value;
+			dojo.byId('test').value=obj.getAttribute("treeName");
 }
 
 //-->
