--- a/src/test/resources/corner/window/tree/tree.html
+++ b/src/test/resources/corner/window/tree/tree.html
@@ -72,7 +72,7 @@ djConfig = { isDebug: true,
 
 <script type="text/javascript">
 <!--
-		new LeftTree("parent",null,"My Tree","com.bj.xf");
+		new LeftTree("parent",null,"My Tree","com.bj.xf","selectRecordShow");
 		enableAjaxDebug();
 //-->
 </script>
