不使用PageServiceLink全部使用DirectServiceLink传递参数
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3734 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.html
+++ b/src/main/webapp/widget/QueryDialogTest.html
@@ -1,6 +1,7 @@
 <span jwcid="@DemoBorder">
 <form jwcid="AForm">
 
+	<span jwcid="dialog2"></span>
 	
 	<span jwcid="winDialog"></span>
 	<a id="touch">touch me</a>
