修改tree css目录结构，加入依赖传递到组建
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3741 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/tree/testTree.html
+++ b/src/test/resources/corner/window/tree/testTree.html
@@ -50,6 +50,8 @@ dojo.require("tapestry.namespace")
 	<input id="test"/>
 	<input id="show2"/>
 	
+	<input type="text" id="dependField" value="dependValue"/>
+	
 	<a id="ccc">fjds</a>
 	
 	<input type="submit"/>
