--- a/src/test/resources/corner/window/tree/tree.html
+++ b/src/test/resources/corner/window/tree/tree.html
@@ -37,7 +37,7 @@ djConfig = { isDebug: true,
 
 <script type="text/javascript">
 <!--
-		new LeftTree("parent",null,"My Tree","com.bj.xf","selectRecordShow");
+		new LeftTree("parent",null,"My Tree","com.bj.xf","selectRecordShow","dependField");
 		enableAjaxDebug();
 //-->
 </script>
