修改selectFunName传递方法
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3742 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/Home.html
+++ b/src/main/webapp/Home.html
@@ -17,7 +17,7 @@
 		<hr/>
 			Widget
 		<a jwcid="@PageLink" page="widget/QueryDialogTest"><span key="QueryDialog" /></a><br>
-		<a jwcid="@PageLink" page="widget/tree"><span key="Tree" /></a><br>
+		<a  page="widget/tree"><span key="Tree" /></a><br>
 		
 		<hr/>
 			GainPoint
