--- a/src/main/webapp/widget/pop.html
+++ b/src/main/webapp/widget/pop.html
@@ -1,6 +1,6 @@
 <span jwcid="@DemoBorder">
 	<form jwcid="AForm" action="AList.html">
 	<textarea jwcid="nameField" cols='55%' rows='10'></textarea>
-	<input type="button" class="alertButton" onClick="queryBox.close();" value="Close"/>
+	<input type="button" class="alertButton" onClick="queryBox.win.close();" value="Close"/>
 	</form>
 </span>
