修改lefttree js 不用传递onselectFunName，查询className目前写死，还需解决
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3744 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/tree/testTree.html
+++ b/src/test/resources/corner/window/tree/testTree.html
@@ -79,7 +79,7 @@ new WindowQueryDialogAction("pwin_winDialog_button",{"id":"generated","className
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
 									   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
-									   "destroyOnClose":"false","all callbacks":"none"});
+									   "destroyOnClose":"false","all callbacks":"none"},"selectRecordShow");
 									   
 
 
