重构WindowQueryDialogAction的js为了方便继承
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3745 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/haha.html
+++ b/src/test/resources/corner/window/haha.html
@@ -39,7 +39,7 @@ djConfig = { isDebug: true,
 winSelectRecord=function(evt){
 	var src=dojo.html.getEventTarget(evt);
 	parent.selectRecord(src);
-	queryBox.close();
+	queryBox.win.close();
 }
 dojo.event.connect(dojo.byId("r1"),"onclick","winSelectRecord");
 
