--- a/src/test/resources/corner/window/pop.html
+++ b/src/test/resources/corner/window/pop.html
@@ -20,7 +20,7 @@ djConfig = { isDebug: true,
 <body>
 <span jwcid="@DemoBorder">
 	<textarea id='t1' cols='55%' rows='10'></textarea>
-	<input type="button" class="alertButton" onClick="queryBox.close();" value="Close"/>
+	<input type="button" class="alertButton" onClick="queryBox.win.close();" value="Close"/>
 <script>
 <!--
 
