--- a/src/test/resources/corner/window/tree/testTree.html
+++ b/src/test/resources/corner/window/tree/testTree.html
@@ -23,6 +23,7 @@ djConfig = { isDebug: true,
 <script type="text/javascript" src="../../../../../main/js/corner/prototype/window/javascripts/window.js"> </script>
 <script type="text/javascript" src="../../../../../main/js/corner/prototype/window/javascripts/window_effects.js"> </script>
 <script type="text/javascript" src="../../../../../main/java/corner/orm/tapestry/component/prototype/window/WindowQueryDialog.js"> </script>
+<script type="text/javascript" src="../../../../../main/java/corner/orm/tapestry/component/prototype/window/LeftTreeDialog.js"> </script>
 <link href="../../../../../main/js/corner/prototype/window/themes/default.css" rel="stylesheet" type="text/css" >	 </link>
 <link href="../../../../../main/js/corner/prototype/window/themes/theme1.css" rel="stylesheet" type="text/css" >	 </link>
 <link href="../../../../../main/js/corner/prototype/window/themes/mac_os_x.css" rel="stylesheet" type="text/css" >	 </link>
@@ -73,13 +74,13 @@ function selectRecordShow(obj){
 
 <script type="text/javascript"><!--
 
-new WindowQueryDialogAction("pwin_winDialog_button",{"id":"generated","className":"alphacube","title":"google",
+new LeftTreeDialog("pwin_winDialog_button",{"id":"generated","className":"alphacube","title":"google",
 									   "url":"tree.html","top ":"top:0","right":"left:0","width":"500","height":"300",
 									   "maxWidth":"none","maxHeight":"none","minWidth ":"500","minHeight":"300",
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
 									   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
-									   "destroyOnClose":"false","all callbacks":"none"},"selectRecordShow");
+									   "destroyOnClose":"false","all callbacks":"none"},"selectRecordShow","我是树","com.xf.com","dependField");
 									   
 
 
