--- a/src/test/resources/corner/window/tree/testTree.html
+++ b/src/test/resources/corner/window/tree/testTree.html
@@ -80,7 +80,7 @@ new LeftTreeDialog("pwin_winDialog_button",{"id":"generated","className":"alphac
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
 									   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
-									   "destroyOnClose":"false","all callbacks":"none"},"selectRecordShow","我是树","com.xf.com","dependField");
+									   "destroyOnClose":"false","all callbacks":"none"},"selectRecordShow","我是树","com.xf.com","dependField","page");
 									   
 
 
