lefttree可以传递多个一来对象
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3755 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/gain/test_gainPoint.html
+++ b/src/test/resources/corner/gain/test_gainPoint.html
@@ -23,7 +23,7 @@ function reElementValues(){
 	
 //	var tempflags = "{'attributes':[{'property':'inName','elementValues':['value1','value2','value3','value4']},{'property':'cnName','elementValues':['value5','value6','value7','value8']}]}";
 	
-	var flags = dojo.json.evalJson({"id":[],"name":[],"cnName":[]});
+	var flags = eval({"id":[],"name":[],"cnName":[]});
 	
 //	var flags = dojo.json.evalJson({"id":["282828c11361334801136133f7cd0002","282828c11361334801136133f7cd0003","282828c113613348011361345cc00006","282828c113613348011361345cc00007"],"name":["1","z","5","6"],"cnName":["q","x","p","o"]});
 
