--- a/src/test/resources/corner/window/tree/testTree.html
+++ b/src/test/resources/corner/window/tree/testTree.html
@@ -52,6 +52,7 @@ dojo.require("tapestry.namespace")
 	<input id="show2"/>
 	
 	<input type="text" id="dependField" value="dependValue"/>
+	<input type="text" id="dependField2" value="dependValue2"/>
 	
 	<a id="ccc">fjds</a>
 	
@@ -80,7 +81,7 @@ new LeftTreeDialog("pwin_winDialog_button",{"id":"generated","className":"alphac
 									   "resizable":"true","closable":"true","minimizable":"true","maximizable":"true",
 									   "draggable":"true","showEffectOptions":"none","hideEffectOptions":"none","effectOptions":"none",
 									   "opacity":1,"recenterAuto":"true","gridX":1,"gridY":1,"wiredDrag":"false",
-									   "destroyOnClose":"false","all callbacks":"none"},"selectRecordShow","我是树","com.xf.com","dependField","page");
+									   "destroyOnClose":"false","all callbacks":"none"},"selectRecordShow","我是树","com.xf.com",eval("{['dependField',['dependField2']]}"),"page");
 									   
 
 
