--- a/src/test/resources/corner/window/tree/tree.html
+++ b/src/test/resources/corner/window/tree/tree.html
@@ -38,6 +38,7 @@ djConfig = { isDebug: true,
 <script type="text/javascript">
 <!--
 		new LeftTree("parent",null,"My Tree");
+		enableAjaxDebug();
 //-->
 </script>
 	</body>
