使用统一的Corner.create建立prototype js
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3759 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/window/test_win.html
+++ b/src/test/resources/corner/window/test_win.html
@@ -40,6 +40,7 @@ dojo.require("tapestry.namespace")
 <script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/effects.js"> </script>
 <script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/window.js"> </script>
 <script type="text/javascript" src="../../../../main/js/corner/prototype/window/javascripts/window_effects.js"> </script>
+<script type="text/javascript" src="../../../../main/js/corner/prototype/corner.js"> </script>
 <script type="text/javascript" src="../../../../main/java/corner/orm/tapestry/component/prototype/window/WindowQueryDialog.js"> </script>
 
 <form method="post" action="/widget/QueryDialogTest,AForm.direct" id="AForm">
