--- a/src/main/webapp/pushlet/AList.html
+++ b/src/main/webapp/pushlet/AList.html
@@ -37,6 +37,17 @@
     </div>
     <hr color="#FF0000"/>
     here is the iframe for pushlet!!!<br/>
-    <iframe width=800 height=600 frameborder=0 scrolling=auto src="SubAList.page"></iframe>
-    <iframe width=400 height=300 frameborder=0 scrolling=auto src="/pushlet.svc?page=pushlet%2FSubAList"></iframe>
+    <span jwcid="@corner:PushletFrame"/>
+    <script language="javascript">
+	function onMessageShow(message){
+		if(message!=null && message.length >0){
+			var MSG1 = new CLASS_MSN_MESSAGE("aa",200,120,"短消息提示：","您有1封消息",message); 
+		    MSG1.rect(null,null,null,screen.height-50); 
+		    MSG1.speed    = 10; 
+		    MSG1.step    = 5; 
+		    //alert(MSG1.top); 
+		    MSG1.show();	
+		}
+	}
+    </script>
 </span>
