更新的dw插件，在插入@Insert组件的时候，自动格式化name 和 id标签内的内容首字母大写，jwcid标签内的内容，(entity.)之后的部分，小写，并且在弹出框之后自动focus到第二个输入框，方便输入
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3768 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/tools/CornerSpan.htm
+++ b/tools/CornerSpan.htm
@@ -22,6 +22,10 @@
 		else {
 			insertTag='id'; 
 		}
+		
+		var idInsTag = insertTag.charAt(0).toUpperCase()+insertTag.substring(1,insertTag.length);
+		var valTag = insertTag.charAt(0).toLowerCase()+insertTag.substring(1,insertTag.length);
+		
 		if (document.insertTagform.objectName.value != ""){
 			objectName=document.insertTagform.objectName.value;
 		}
@@ -31,7 +35,7 @@
 		
 		//手动实现再选中的文本外围增加span标签
 		var dom = dw.getDocumentDOM();               
-		dom.source.wrapSelection("<span id=\""+insertTag+"Field\" jwcid=\"@Insert\" value=\"ognl:"+objectName+"."+insertTag+"\">","</span>");
+		dom.source.wrapSelection("<span id=\""+idInsTag+"Field\" jwcid=\"@Insert\" value=\"ognl:"+objectName+"."+valTag+"\">","</span>");
 		return;        
 		
 
@@ -40,8 +44,13 @@
 	function displayHelp(){
 		dreamweaver.browseDocument("mailto:Ghostbb@bjmaxinfo.com");
 	}
+	
+	function focusObject(){
+		var obj = document.getElementById("insertTag");
+		obj.focus();
+	}
 </script>
-<body>
+<body onload="focusObject()">
 <form action="" method="post" name="insertTagform" id="insertTagform">
  <table width="380" border="0" cellspacing="3" cellpadding="2" align="center">
   <tr>
