增加ajaxio css 删除不必要的js，解决和dojo的冲突
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3831 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/test/resources/corner/ajaxio/demo.html
+++ b/src/test/resources/corner/ajaxio/demo.html
@@ -1,9 +1,10 @@
 <head>
 	<title>Ajaxio Demo</title></head>
 <body>
-	<script type="text/javascript" src="wz_jsgraphics.js"></script>
-	<script type="text/javascript" src="prototype.js"></script>
-	<script src="src/scriptaculous.js"></script>
+	<script type="text/javascript" src="js/wz_jsgraphics.js"></script>
+	<script type="text/javascript" src="js/prototype.js"></script>
+	<script type="text/javascript" src="js/dragdrop.js"></script>
+	<script type="text/javascript" src="js/effects.js"></script>
 	<form action="#" onsubmit="stopSubmit();return false;" name="f1">
 	<style>
 
