--- a/src/test/resources/corner/draw/jacob/roundCorner/demo.html
+++ b/src/test/resources/corner/draw/jacob/roundCorner/demo.html
@@ -5,7 +5,7 @@
   <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
   <title>Round Corner Example for Open-jACOB Draw2D</title>
         <!-- common, all times required, imports -->
-        <SCRIPT src='wz_jsgraphics.js'></SCRIPT>             <SCRIPT src='draw2d.js'></SCRIPT>
+        <SCRIPT src='../wz_jsgraphics.js'></SCRIPT>             <SCRIPT src='../draw2d.js'></SCRIPT>
 
         <!-- example specific imports -->
 	<SCRIPT src="Start.js"></SCRIPT>
